--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                     <p>Lamb Gyro • Lunch Specials</p>
                 </div>
                 <div class="footer-credit">
-                    <p>Website by <a href="https://bayouwebstudio.com" target="_blank">Bayou Web Studios</a></p>
+                    <p>Website by <a href="https://bayouwebstudio.com" target="_blank">Bayou Web Studios</a> • <a href="changes.html" style="color: #d2691e; text-decoration: none;">Request Changes</a></p>
                 </div>
             </div>
         </div>
