--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                     <p>Lamb Gyro • Lunch Specials</p>
                 </div>
                 <div class="footer-credit">
-                    <p>Website by <a href="https://bayouwebstudio.com" target="_blank">Bayou Web Studios</a> • <a href="changes.html" style="color: #d2691e; text-decoration: none;">Request Changes</a></p>
+                    <p><a href="https://bayouwebstudio.com" target="_blank" style="color: inherit; text-decoration: none; opacity: 0.5; font-size: 12px;">Powered by BWS</a> • <a href="changes.html" style="color: #d2691e; text-decoration: none;">Request Changes</a></p>
                 </div>
             </div>
         </div>
